# internal/routes/lingro.go
@@ -18,6 +18,7 @@ func LingroRouter(router *gin.RouterGroup) {
 	{
 		wordGroupe.POST("/", lingro_controllers.NewWord)
 		wordGroupe.GET("/:user_id", lingro_controllers.GetWordsByVocabularyID)
+		wordGroupe.GET("/word/:word_id", lingro_controllers.GetWordsByID)
 		wordGroupe.PUT("/:word_id", lingro_controllers.UpdateWord)
 		wordGroupe.PUT("/scores/:word_id/:scores", lingro_controllers.SetScores)
 		wordGroupe.DELETE("/:word_id", lingro_controllers.DeleteWord)
